added title, subtitle, text-area box, and button to html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
-    
+    <div class="wrap">
+        <header></header>
+            <h1>Password Generator</h1>
+        </header>
+
+        <main>
+            <h2>Generate Password</h2>
+            <div>
+                <textarea readonly id="password" placeholder="Your Secure Password"></textarea>
+            </div>
+            <div>
+                <button id="generate-pass" class="btn">Generate Password</button>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
