added css code to organize html content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </header>
 
         <main>
-            <h2>Generate Password</h2>
+            <h2 class="generate">Generate Password</h2>
             <div>
                 <textarea readonly id="password" placeholder="Your Secure Password"></textarea>
             </div>
-            <div>
+            <div class="button-spaces">
                 <button id="generate-pass" class="btn">Generate Password</button>
             </div>
         </main>
