--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
             </div>
         </main>
     </div>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 </html>
