added description and usage to readme page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <main>
             <h2 class="generate">Generate Password</h2>
             <div>
-                <textarea readonly id="password" placeholder="Your Secure Password"></textarea>
+                <textarea readonly id="password" placeholder="Your Secure Password
+(Please include at least one criteria)"></textarea>
             </div>
             <div class="button-spaces">
                 <button id="generate-pass" class="btn">Generate Password</button>
